--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <title>Age Counter by PXD / ProgrammerXD</title>
+    <meta name="description" content="A Simple & Sleek Age Counter to Count your Age upto 12 decimals in Real Time!">
+    <meta name="keywords" content="age counter, pxd, programmerxd, naman, age, counter, realpxd">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="author" content="ProgrammerXD">
+    <link rel="stylesheet" href="style.css" id="stylesheet">
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="120x120" href="/assets/generated/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/generated/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/generated/favicon-16x16.png">
@@ -9,18 +20,22 @@
     <link rel="mask-icon" href="/assets/generated/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-
-    <meta name="title" content="Age Counter by PXD / ProgrammerXD">
-    <meta name="description" content="A Simple & Sleek Age Counter to Count your Age upto 12 decimals in Real Time !">
-    <meta name="keywords" content="age counter , pxd , programmerxd , naman , age , counter , realpxd">
-    <meta name="robots" content="index, follow">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="language" content="English">
-    <meta name="author" content="ProgrammerXD">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 , maximum-scale=1.0">
-    <title>Age Counter</title>
-    <link rel="stylesheet" href="style.css" id="stylesheet">
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Age Counter">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://realpxd.github.io/age/">
+    <meta property="og:title" content="Age Counter">
+    <meta property="og:description"
+        content="A Simple & Sleek Age Counter to Count your Age upto 12 decimals in Real Time!">
+    <meta property="og:image" content="/assets/birthday.jpg">
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://realpxd.github.io/age/">
+    <meta property="twitter:title" content="Age Counter">
+    <meta property="twitter:description"
+        content="A Simple & Sleek Age Counter to Count your Age upto 12 decimals in Real Time!">
+    <meta property="twitter:image" content="/assets/birthday.jpg">
 </head>
 
 <body>
