--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <meta name="author" content="ProgrammerXD">
     <link rel="stylesheet" href="style.css" id="stylesheet">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="120x120" href="/assets/generated/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/generated/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/generated/favicon-16x16.png">
-    <link rel="manifest" href="/assets/generated/site.webmanifest">
-    <link rel="mask-icon" href="/assets/generated/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="120x120" href="https://realpxd.github.io/age/assets/generated/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://realpxd.github.io/age/assets/generated/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://realpxd.github.io/age/assets/generated/favicon-16x16.png">
+    <link rel="manifest" href="https://realpxd.github.io/age/assets/generated/site.webmanifest">
+    <link rel="mask-icon" href="https://realpxd.github.io/age/assets/generated/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <!-- Primary Meta Tags -->
@@ -28,14 +28,14 @@
     <meta property="og:title" content="Age Counter">
     <meta property="og:description"
         content="A Simple & Sleek Age Counter to Count your Age upto 12 decimals in Real Time!">
-    <meta property="og:image" content="/assets/birthday.jpg">
+    <meta property="og:image" content="https://realpxd.github.io/age/assets/birthday.jpg">
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://realpxd.github.io/age/">
     <meta property="twitter:title" content="Age Counter">
     <meta property="twitter:description"
         content="A Simple & Sleek Age Counter to Count your Age upto 12 decimals in Real Time!">
-    <meta property="twitter:image" content="/assets/birthday.jpg">
+    <meta property="twitter:image" content="https://realpxd.github.io/age/assets/birthday.jpg">
 </head>
 
 <body>
